# TUMDriving

./: .gitignore  README.md  pyproject.toml
autonomous_driving/: drive.py
autonomous_driving/helper/: cv_utils.py
autonomous_driving/networks/: resnet.py  yolov8.py
autonomous_driving/trafficlights/: classifier.py
autonomous_driving/train/: resnet_train.py
src/: drive.py
src/data_preparation/: resnet_data.py
src/helper/: augmentation.py
src/networks/: command_conditional.py  nvidia.py  resnet.py
src/notebooks/: TUMsimulator_self_driving.ipynb
src/trafficlights/: utils.py
src/train/: resnet_train.py
src/weights/command/: 1508_60.pt
src/weights/nvidia/: nvidia_100.pt
tests/yolov5/: test_yolov5.py  transforms.py
